fixed about section spacing

--- a/less/index.less
+++ b/less/index.less
@@ -18,3 +18,9 @@
 .github {
     background-image:url('../img/GitHub-small.png');
 }
+
+.container .about {
+    height: 100vh;
+    //margin: 20% 0;
+    //border:1px solid red;
+}
